Window and device class

--- a/Proj.vcxproj.filters
+++ b/Proj.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClCompile Include="Chapter 2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Device.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="E:\Facultate\DirectX\Lab03\Surse_texturare\banana.bmp">
@@ -28,5 +34,13 @@
     <None Include="tiger.x">
       <Filter>Resource Files</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Device.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
