--- a/Proj.vcxproj
+++ b/Proj.vcxproj
@@ -89,12 +89,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Chapter 2.cpp" />
+    <ClCompile Include="Device.cpp" />
+    <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="E:\Facultate\DirectX\Lab03\Surse_texturare\banana.bmp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="tiger.x" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Device.h" />
+    <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
